Fix spacing issue in nav

--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ textarea {
 
    nav ul {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
   }
 
